--- a/.drone.yaml
+++ b/.drone.yaml
@@ -3,12 +3,9 @@ kind: pipeline
 type: ssh
 name: default
 
-server:
-  host: seint-drone.digitalstacks.net
-
 steps:
-- name: greeting
-  commands:
-  - echo hello world
-
-...
+  - name: lint
+    image: python:3.7-alpine
+    commands:
+      - python -m pip install -r requirements.txt
+      - flake8
