--- a/.drone.yaml
+++ b/.drone.yaml
@@ -1,11 +1,13 @@
----
 kind: pipeline
 type: ssh
 name: default
 
+server:
+  host: 35.72.31.70
+  user: root
+  password: virtualcom
+
 steps:
-  - name: lint
-    image: python:3.7-alpine
-    commands:
-      - python -m pip install -r requirements.txt
-      - flake8
+- name: build
+  commands:
+  - ls
