--- a/.drone.yaml
+++ b/.drone.yaml
@@ -3,11 +3,12 @@ type: ssh
 name: default
 
 server:
-  host: 35.72.31.70
-  user: root
-  password: virtualcom
+  host: 18.181.228.86
+  user: ubuntu
+  password:
+    from_secret: password
 
 steps:
-- name: build
+- name: greeting
   commands:
-  - ls
+  - echo hello world
