--- a/.drone.yaml
+++ b/.drone.yaml
@@ -5,8 +5,7 @@ name: default
 server:
   host: 18.181.228.86
   user: ubuntu
-  password:
-    from_secret: password
+  password: virtualcom
 
 steps:
 - name: greeting
