--- a/.drone.yaml
+++ b/.drone.yaml
@@ -1,13 +1,10 @@
-kind: pipeline
-type: ssh
-name: default
-
-server:
-  host: 18.181.228.86
-  user: ubuntu
-  password: virtualcom
-
-steps:
-- name: greeting
-  commands:
-  - echo hello world
+pipeline:
+  ssh:
+    image: appleboy/drone-ssh
+    host: seint-drone.digitalstacks.net
+    username: SaintNandarOo
++   volumes:
++     - /root/drone_rsa:/root/ssh/drone_rsa
+    key_path: /root/ssh/drone_rsa
+    script:
+      - echo "test ssh"
