--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ type: ssh
 name: default
 
 server:
-  host: 18.181.228.86
+  host: seint-drone.digitalstacks.net
   user: ubuntu
   password: virtualcom
 
