--- a/.drone.yml
+++ b/.drone.yml
@@ -3,12 +3,12 @@ type: ssh
 name: default
 
 server:
-  host: seint-drone.digitalstacks.net
+  host: 18.181.228.86
   user: ubuntu
   password:
     from_secret: password
 
 steps:
-- name: greetings
+- name: greeting
   commands:
   - echo hello world
